<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/call_labels_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    android:paddingEnd="@dimen/activity_margin">

    <TextView
        android:id="@+id/call_labels_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:textSize="@dimen/normal_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/call_labels_block"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/block_number"
        app:icon="@drawable/ic_block_vector" />

    <LinearLayout
        android:id="@+id/call_labels_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/call_labels_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:alpha="0.6"
        android:text="@string/no_labels_yet"
        android:textStyle="italic" />

    <AutoCompleteTextView
        android:id="@+id/call_labels_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:completionThreshold="1"
        android:hint="@string/new_label"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:maxLines="1" />
</LinearLayout>
